AICOE-Platform-Infrastructure-old/ansible/files/grafana-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: grafana
spec:
  hosts:
  - "*"
  gateways:
  - kubeflow/kubeflow-gateway
  http:
  - match:
    - uri:
        prefix: /grafana/
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: grafana.grafana.svc.cluster.local
